# llm-nonsense

./: README.md
barely-managing/: README.md  barely-managing.epub  barely-managing.md
barely-managing/chapters/: ch01-the-offer-you-cant-refuse.md  ch02-your-first-week-is-already-too-late.md  ch03-the-identity-crisis.md  ch04-what-big-tech-hides.md  ch05-the-1-1-is-the-job.md  ch06-feedback-without-hr.md  ch07-first-promotion-packet.md  ch08-hiring-at-scale.md  ch09-the-conversation-nobody-trained-you-for.md  ch10-performance-problems-and-the-four-bases.md  ch11-not-getting-promoted.md  ch12-the-firing-chapter.md  ch13-layoffs-reorgs.md  ch14-the-70-team-problem.md  ch15-prioritization-as-a-sport.md  (+2 more)
calendar-chaos/: README.md  package-lock.json  package.json
cellini-vs-ninja-turtles/: cellini-vs-ninja-turtles.epub  create_epub.py
housevisualization/: app.js  housemasks.json  index.html  mask-editor.js  styles.css
linkedin/: .env.example  .gitignore  README.md  claude-linkedin-mcp-plan.md  codex-linkedin-mcp-plan.md  pyproject.toml
linkedin/linkedin_mcp/: __init__.py  config.py  linkedin_client.py  models.py  pdf_download.py  profile_resolver.py  search.py  server.py  usage_tracker.py
linkedin/tests/: conftest.py  test_pdf_download.py  test_profile_resolver.py  test_search.py  test_usage_tracker.py
linkedin/tests/fixtures/: pdf_action_response.json  profile_page.html  search_response.json
ps1-demo/: index.html
src/: sat_solver.cpp  sat_solver.h
tests/: test_sat.cpp
the-algorithm-kids/: epub-style.css  the-algorithm-kids-book-1.md
(+52 files in other folders)
