[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-mcp"
version = "0.1.0"
description = "MCP server for LinkedIn search and profile PDF workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0",
  "httpx>=0.27",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
]

[project.scripts]
linkedin-mcp-server = "linkedin_mcp.server:main"

[tool.setuptools.packages.find]
include = ["linkedin_mcp*"]
